# content_selling_platform

./: .coveragerc  .env.sample  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
content/: forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_initial.py
content/src/: api_youtube.py  base.py  reg_expressions.py  services.py  src_context.py  work_image.py
content/templates/content/: base.html  confirm_delete.html  content_confirm_delete.html  content_detail.html  content_form.html  content_list.html  index.html
content/templates/content/includes/: inc_badge.html  inc_video_block.html
content/templatetags/: templatetags.py
product/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_initial.py
product/src/: Payment.py  api_stripe.py
product/templates/product/: payment.html
static/js/: jquery.min.js  main.js
subscription/: models.py  urls.py  views.py
subscription/migrations/: 0001_initial.py  0002_initial.py
subscription/src/: Payment.py  subscription.py
subscription/templates/subscription/: paid_subs_button.html
subscription/templates/subscription/includes/: inc_subs_button.html  inc_subs_button_detail.html  inc_subscribe.html
users/: forms.py  models.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/src/: smsru_api.py
users/templates/users/: base.html  login.html  user_detail.html  user_form.html  verify_form.html
(+1 files in other folders)
