[tool.poetry]
name = "сontent-selling-platform"
version = "0.1.0"
description = ""
authors = ["Vladislav_Poroshin <vld.poroshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
crispy-bootstrap5 = "^2023.10"
django-crispy-forms = "^2.1"
django-celery-beat = "^2.5.0"
google-api-python-client = "^2.107.0"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.5"
stripe = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
